@@ -1078,7 +1078,7 @@ public:
     bool setFontDef(const khtml::FontDef & v) {
         // bah, this doesn't compare pointers. broken! (Dirk)
         if (!(inherited->font.fontDef == v)) {
-            inherited.access()->font = Font( v );
+            inherited.access()->font = Font( v, inherited->font.letterSpacing, inherited->font.wordSpacing );
             return true;
         }
         return false;
